<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    tools:context=".view.activity.mine.FeedBackActivity">

    <TextView
        android:id="@+id/tv_title_feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/mine_feedback"
        android:textColor="@color/colorGrey"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/et_note_feed"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/tv_title_feed"
        android:layout_marginTop="30dp"
        android:background="@drawable/feed_shape"
        android:hint="@string/mine_feedback_hint"
        android:padding="20dp"
        android:textSize="12sp" />

    <Button
        android:id="@+id/bt_submit_feed"
        android:layout_width="48dp"
        android:layout_height="25dp"
        android:layout_below="@id/et_note_feed"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/mine_feedback_submit_bg"
        android:text="@string/mine_feedback_submit"
        android:textColor="@color/colorWhite" />


    <ImageView
        android:id="@+id/iv_feed_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/back" />
</RelativeLayout>