<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context=".view.activity.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp">

        <ImageView
            android:id="@+id/iv_phone_login"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/login_phone" />

        <EditText
            android:id="@+id/et_phone_login"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_phone_login"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhiteA1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/iv_psd_login"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/login_lock" />

        <EditText
            android:id="@+id/et_psd_login"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_psd_login"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_psd"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_show_pwd_login"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/login_eye" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhiteA1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/cb_rem_pwd_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:buttonTint="@color/colorWhite"
            android:text="@string/login_rem_psd"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_fast_resign_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/login_fast_resign"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/bt_login_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/shape_radius_gradient"
        android:text="@string/login_login"
        android:textColor="@color/colorPink"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/colorWhiteA2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_others"
            android:textColor="@color/colorWhite"
            android:textSize="10sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/colorWhiteA2" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_wechat_login"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/login_wechat" />
</LinearLayout>