<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context=".view.activity.ResignActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp">

        <ImageView
            android:id="@+id/iv_name_resign"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/resign_name" />

        <EditText
            android:id="@+id/et_name_resign"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_name_resign"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/resign_name"
            android:maxEms="20"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhiteA1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iv_sex_resign"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/resign_sex" />

        <EditText
            android:id="@+id/et_sex_resign"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_sex_resign"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/resign_sex"
            android:maxEms="3"
            android:maxLength="3"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhiteA1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iv_birthday_resign"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/resign_date" />

        <EditText
            android:id="@+id/et_birthday_resign"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_birthday_resign"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/resign_birthday"
            android:inputType="date"
            android:maxEms="8"
            android:maxLength="8"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhiteA1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iv_phone_resign"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/resign_phone" />

        <EditText
            android:id="@+id/et_phone_resign"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_phone_resign"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/resign_phone"
            android:inputType="phone"
            android:maxEms="11"
            android:maxLength="11"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhiteA1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iv_email_resign"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/resign_email" />

        <EditText
            android:id="@+id/et_email_resign"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_email_resign"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/resign_email"
            android:inputType="textEmailAddress"
            android:maxEms="30"
            android:maxLength="30"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhiteA1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iv_pwd_resign"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/resign_lock" />

        <EditText
            android:id="@+id/et_pwd_resign"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_pwd_resign"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/resign_pws"
            android:inputType="textPassword"
            android:maxEms="16"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhiteA1" />

    <Button
        android:id="@+id/bt_login_resign"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="78dp"
        android:background="@drawable/shape_radius_gradient"
        android:text="@string/resign_btn"
        android:textColor="@color/colorPink"
        android:textSize="18sp" />
</LinearLayout>